Neue Struktur erstellt, mit ersten Gedanken darin

--- a/doc.tex
+++ b/doc.tex
@@ -3,7 +3,7 @@
 %% Datum: November 2010 
 %%**************************************************************
 
-\title{Die Ueberschrift}
+\title{Backward Propagation Neural Networks}
 \author{Tobias Dreher, David Henn}
 \date{April 2011}
 
@@ -20,9 +20,11 @@
 	]
 	
 	%-----------------------------------------------
-	\input{content/x}	
-	\input{content/y}	
-	\input{content/z}
+	\input{content/einleitung}	
+	\input{content/grundlagen}	
+	\input{content/umsetzung}
+	\input{content/dreher}
+	\input{content/henn}
 	%-----------------------------------------------
 	
 	\onecolumn
