--- a/content/literatur.tex
+++ b/content/literatur.tex
@@ -1,9 +1,21 @@
 \begin{thebibliography}{---}
-	
-\bibitem[Are10a]{areamobile2010}
-	\textbf{Nokia im Umbruch - QT rückt in den Vordergrund}, \\
-	\emph{www.areamobile.de/news/16866-qt-rueckt-in-den-vordergrund-nokia-im-umbruch},
-	Rene Melzer, areamobile, AreaDigital AG, 21.10.2010
+
+% Einleitung
+
+\bibitem[Kri07]{bib:dkriesel}
+  \textsc{David Kriesel}: 
+  \textbf{Ein kleiner Überblick über Neuronale Netze}.
+  \emph{www.dkriesel.com}, 2007, Abgerufen am 16.04.2011
+
+% Grundlagen
+
+% Umsetzung
+
+% Dreher
+
+% Henn
+
+% TODO delete
 	
 \bibitem[Are10b]{areamobileN8}
 	\textbf{Nokia N8 Test: Nokia verpasst den Anschluss}, \\
