--- a/header.tex
+++ b/header.tex
@@ -67,8 +67,8 @@
 %
 %  8. Pakete für mathematischen Textsatz.
 %
-%\usepackage{amsmath}
-%\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{amssymb}
 %%\usepackage{dsfont}
 %%\usepackage{mathtools}
 
