--- a/doc.tex
+++ b/doc.tex
@@ -10,14 +10,14 @@
 \input{header} 
 
 \begin{document}
-	\twocolumn[
+	%\twocolumn[
 		\maketitle
 		\renewcommand{\abstractname}{}
 		\begin{onecolabstract}
 			\input{content/abstract}
 		\end{onecolabstract}
 		\vspace{1cm}
-	]
+	%]
 	
 	%-----------------------------------------------
 	\input{content/einleitung}	
@@ -27,7 +27,7 @@
 	\input{content/henn}
 	%-----------------------------------------------
 	
-	\onecolumn
+	%\onecolumn
 	\input{content/literatur}
 	
 \end{document}
