Abstract und meine geistigen Erguesse festgehalten

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -1,1 +1,1 @@
-Kurzer Abstract über Backward Propagation Neural Networks 
+Seit über 60 Jahren werden künstlich erzeugte Neuronale Netze erforscht und entwickelt. In heutigen elektronischen Geräten werden sie vielfach genutzt. Der Artikel erläutert die Grundlagen von Neuronalen Netzen an Hand den \emph{Backward Propagation Neural Networks}.
