--- a/content/literatur.tex
+++ b/content/literatur.tex
@@ -1,17 +1,30 @@
 \begin{thebibliography}{---}
 
 % Einleitung
-
 \bibitem[Kri07]{bib:dkriesel}
   \textsc{David Kriesel}: 
   \textbf{Ein kleiner Überblick über Neuronale Netze}.
-  \emph{www.dkriesel.com}, 2007, Abgerufen am 16.04.2011
+  \emph{www.dkriesel.com}, 2007, Abgerufen am 15.04.2011
 
 % Grundlagen
 
 % Umsetzung
 
 % Dreher
+\bibitem[ct211]{bib:ct211}
+  \textsc{Hans-Arthur Marsiske}: 
+  \textbf{Wie Maschinen denken lernen}.
+  c't Magazin, Ausgabe 2/2011, S. 70 ff., Heise Zeitschriften Verlag
+
+\bibitem[ct711]{bib:ct711}
+  \textsc{Hans-Arthur Marsiske}: 
+  \textbf{Der WM-Titel ist näher gerückt}.
+  c't Magazin, Ausgabe 7/2011, S. 72 ff., Heise Zeitschriften Verlag
+
+\bibitem[Ame11]{bib:ameisen}
+  \textsc{Karl-Werner Hansmann, Nils Boysen}: 
+  \textbf{Ameisenalgorithmus}.
+  \emph{www.ameisenalgorithmus.de}, 2004, Abgerufen am 16.04.2011
 
 % Henn
 
