--- a/doc.tex
+++ b/doc.tex
@@ -10,16 +10,17 @@
 \input{header} 
 
 \begin{document}
-	%\twocolumn[
+	\twocolumn[
 		\maketitle
 		\renewcommand{\abstractname}{}
 		\begin{onecolabstract}
 			\input{content/abstract}
 		\end{onecolabstract}
 		\vspace{1cm}
-	%]
+	]
 	
 	%-----------------------------------------------
+	\onecolumn
 	\input{content/einleitung}	
 	\input{content/grundlagen}	
 	\input{content/umsetzung}
@@ -27,7 +28,7 @@
 	\input{content/henn}
 	%-----------------------------------------------
 	
-	%\onecolumn
+	\onecolumn
 	\input{content/literatur}
 	
 \end{document}
