Fertig. Fehlt nur noch eine eigene Meinung

--- a/content/literatur.tex
+++ b/content/literatur.tex
@@ -28,6 +28,16 @@
 
 % Henn
 
+\bibitem[enc11]{bib:neuron}
+  \textsc{encefalus.com}: 
+  \textbf{Modell eines neuronalen Netzes}.
+  \emph{http://encefalus.com}, 2010, Abgerufen am 17.04.2011
+  
+ \bibitem[hef11]{bib:stufe}
+  \textsc{Klaus Heft}: 
+  \textbf{MATHEMATISCHER VORKURS zum Studium der Physik}.
+  \emph{http://www.thphys.uni-heidelberg.de/~hefft/vk1/}, 2011, Abgerufen am 17.04.2011
+
 % TODO delete
 	
 \bibitem[Are10b]{areamobileN8}
