--- a/content/grundlagen.tex
+++ b/content/grundlagen.tex
@@ -85,7 +85,7 @@ Um die vollständige Systemantwort zu erhalten, muss diese Funktion für jedes N
 
 \subsection{Training}
 
-Damit ein neuronales Netz eine adäquate Systemantwort generieren kann, ist es notwendig dieses zu trainieren. In der Natur geschieht dies, indem die einzelnen Verbindungen zwischen zwei Neuronen dicker werden, oder sogar neue entstehen. Zumindest das Dickenwachstum lässt sich im mathematischen Modell durch die Modifikation der Gewichte nachbilden. Wichtige Neuronen werden ungefiltert, oder sogar verstärkt in den Erregungswert einfließen, unwichtige, oder sogar störende Neuronen werden gedämpft.
+Damit ein neuronales Netz eine adäquate Systemantwort generieren kann, ist es notwendig das Netz zu trainieren. In der Natur geschieht dies, indem die einzelnen Verbindungen zwischen zwei Neuronen dicker werden, oder sogar neue entstehen. Zumindest das Wachstum der Verbindungen lässt sich im mathematischen Modell durch die Modifikation der Gewichte nachbilden. Wichtige Neuronen werden ungefiltert, oder sogar verstärkt in den Erregungswert einfließen, unwichtige, oder sogar störende Neuronen werden gedämpft.
 
 Um das neuronale Netz zu trainieren muss ein Teil der zu analysierenden Daten manuell bearbeitet werden. Die eine Hälfte dieses Datensatzes wird zum Training des Netzes eingesetzt, der Andere zur Verifikation der Arbeitsweise.
  
@@ -102,10 +102,11 @@ Eine Möglichkeit zur Minimierung des Fehlers ist das Gradientenabstiegsverfahre
 \Delta w_{pq}=-\eta \frac{\delta E}{\delta w_{pq}}
 \end{equation}
 
-Diese Formel gilt es nun für die einzelnen Schichten anzuwenden. Hierbei muss eine Fallunterscheidung vorgenommen werden, ob es sich um ein Neuron des Output-Layers, oder eines des Hidden-Layers handelt, da die Neuronen des Output-Layers keine nachfolgende Schicht mehr bedienen und ihr Output ungefiltert als Systemantwort an die Außenwelt gelangt.
+Diese Formel gilt es nun für die einzelnen Schichten anzuwenden. Hierbei muss eine Fall\-unter\-scheidung vorgenommen werden, ob es sich um ein Neuron des Output-Layers oder eines des Hidden-Layers handelt. Die Neuronen des Output-Layers bedienen keine nachfolgende Schicht und ihr Output gelangt ungefiltert als Systemantwort an die Außenwelt.
 
 \emph{Berechnung der Änderung der Gewichte für das Output-Layer:}
-\\Die Fehlerfunktion $E$ wird durch Anwendung der Kettenregel erweitert. So wird $E$ nicht direkt nach $w$ abgeleitet, sondern nach der Erregungsfunktion $\sigma$. Diese wird dann gesondert nach $w$ abgeleitet.
+
+Die Fehlerfunktion $E$ wird durch Anwendung der Kettenregel erweitert. So wird $E$ nicht direkt nach $w$ abgeleitet, sondern nach der Erregungsfunktion $\sigma$. Diese wird dann gesondert nach $w$ abgeleitet.
 \begin{equation}
 \frac{\delta E}{\delta w_{pq}} = \frac{\delta E}{\delta \sigma_{k}} \frac{\delta \sigma_{k}}{\delta w_{kj}}
 \label{eqn:output-erw}
@@ -138,7 +139,8 @@ So lautet dann die endgültige Formel zur Berechnung der Änderung des Gewichts 
 \end{equation}
 
 \emph{Berechnung der Änderung der Gewichte für das Hidden-Layer:}
-\\Die Berechnung für ein Neuron des Hidden-Layer ist ein wenig komplexer, da hier die eigentliche Backpropagation stattfindet und der Fehler der nachfolgenden Schicht (hier das Output-Layer) berücksichtigt wird. Auch hier wird die Ableitung durch den Einsatz der Kettenregel vereinfacht.
+
+Bei der Berechnung für ein Neuron des Hidden-Layers findet die eigentliche Backpropagation statt und der Fehler der nachfolgenden Schicht (hier das Output-Layer) wird berücksichtigt. Auch hier wird die Ableitung durch den Einsatz der Kettenregel vereinfacht.
 \begin{equation}
 \frac{\delta E}{\delta w_{ji}} = \frac{\delta E}{\delta y_j} \frac{\delta y_j}{\delta\sigma_j}\frac{\delta\sigma_j}{\delta w_{ji}}
 \end{equation}
@@ -157,7 +159,7 @@ Die endgültige Formel für ein Neuron des Hidden-Layer lautet:
 \begin{equation}
 \Delta w_{ji}=\eta \cdot \left(\sum_{k=1}^{c} \delta_k w_{kj}\right)\cdot f'(\sigma_j)\cdot x_i
 \end{equation}
-Sie beinhaltet den Fehler der verbundenen Output-Neuronen, sowie das Gewicht der Verbindung zu ihnen, die Ableitung der eigenen Aktivierungsfunktion, sowie den Input des Neurons aus der vorherigen Schicht. Diese Funktion muss also für jede einzelnen eingehende Verbindung zu diesem Neuron berechnet werden. Dies gestaltet sich allerdings äußerst einfach, da einmal berechnet, alle Faktoren bis auf $x_i$ für diesen Lernschritt gleich bleiben.
+Sie beinhaltet den Fehler der verbundenen Output-Neuronen, sowie das Gewicht der Verbindung zu ihnen, die Ableitung der eigenen Aktivierungsfunktion, sowie den Input des Neurons aus der vorherigen Schicht. Diese Funktion muss also für jede eingehende Verbindung zu diesem Neuron berechnet werden. Dies gestaltet sich allerdings äußerst einfach, da einmal berechnet, alle Faktoren bis auf $x_i$ für diesen Lernschritt gleich bleiben.
 
 Nachdem nun die Änderung der Gewichte berechnet wurde, kann im Anschluss das alte Gewicht angepasst werden und ein weiterer Lernschritt erfolgen.
 \begin{equation}
@@ -165,8 +167,9 @@ w_{pq, neu}=w_{pq, alt}+\Delta w_{pq}
 \end{equation}
 
 \emph{Probleme:}
-\\Das Gradientenabstiegsverfahren ist sehr elegant und einfach zu implementieren. Allerdings gibt es auch einige Nachteile, die berücksichtigt werden müssen. Bei großen Fehlern wird das Gewicht sehr stark angepasst. Dadurch springt der neue Funktionswert sehr stark im Funktionsraum. Dies kann dazu führen, dass der Fehler eventuell sogar verstärkt wird. Sollte dies der Fall sein, besteht die Gefahr, dass das neuronale Netz divergiert, anstatt zu konvergieren. Der Fehler würde sich immer weiter aufschaukeln und das Ergebnis immer schlechter werden, was wiederum die Sprungweite des Gewichts vergrößert. Damit dies nicht passiert, kann die Lernrate $\eta$ bei jedem Lernschritt verkleinert werden. Dadurch wird das Neuron zum konvergieren gezwungen. Allerdings ist so nicht dass die Anpassung des Gewichts wirklich bei Erreichen eines Minimums aufhört. 
-Des Weiteren ist nicht sicher, ob das Minimum, auf das das Gewicht optimiert wird wirklich ein globales Minimum ist. Da immer nur in Richtung der negativen Steigung gewandert wird, ist es sehr wahrscheinlich, nur ein lokales Minimum zu erreichen. Dagegen gibt es auch keine Maßnahme. Sollte das Netz also trotz Training keine ausreichend genaue Systemantwort generieren, wäre es eine Option, die Gewichte nochmals neu mit Zufallszahlen zu initialisieren, um dadurch möglicherweise in einem besseren Minimum des Fehlers zu landen.
+
+Das Gradientenabstiegsverfahren ist sehr elegant und einfach zu implementieren. Allerdings gibt es auch einige Nachteile, die berücksichtigt werden müssen. Bei großen Fehlern wird das Gewicht sehr stark angepasst. Dadurch springt der neue Funktionswert sehr stark im Funktionsraum. Dies kann dazu führen, dass der Fehler eventuell sogar verstärkt wird. Sollte dies der Fall sein, besteht die Gefahr, dass das neuronale Netz divergiert, anstatt zu konvergieren. Der Fehler würde sich immer weiter aufschaukeln und das Ergebnis immer schlechter werden, was wiederum die Sprungweite des Gewichts vergrößert. Damit dies nicht passiert, kann die Lernrate $\eta$ bei jedem Lernschritt verkleinert werden. Dadurch wird das Neuron zum konvergieren gezwungen. Allerdings ist so nicht dass die Anpassung des Gewichts wirklich bei Erreichen eines Minimums aufhört. 
+Des Weiteren ist nicht sicher, ob das Minimum, auf das das Gewicht optimiert wird, wirklich ein globales Minimum ist. Da immer nur in Richtung der negativen Steigung gewandert wird, ist es sehr wahrscheinlich, nur ein lokales Minimum zu erreichen. Dagegen gibt es auch keine Maßnahme. Sollte das Netz also trotz Training keine ausreichend genaue Systemantwort generieren, wäre es eine Option, die Gewichte nochmals neu mit Zufallszahlen zu initialisieren, um dadurch möglicherweise in einem besseren Minimum des Fehlers zu finden.
 
 
 
