--- a/doc.tex
+++ b/doc.tex
@@ -23,7 +23,7 @@
 	\onecolumn
 	\input{content/einleitung}	
 	\input{content/grundlagen}	
-	\input{content/umsetzung}
+	%\input{content/umsetzung}
 	\input{content/dreher}
 	\input{content/henn}
 	%-----------------------------------------------
