--- a/doc.tex
+++ b/doc.tex
@@ -10,17 +10,17 @@
 \input{header} 
 
 \begin{document}
-	\twocolumn[
+	%\twocolumn[
 		\maketitle
 		\renewcommand{\abstractname}{}
 		\begin{onecolabstract}
 			\input{content/abstract}
 		\end{onecolabstract}
 		\vspace{1cm}
-	]
+	%]
 	
 	%-----------------------------------------------
-	\onecolumn
+	%\onecolumn
 	\input{content/einleitung}	
 	\input{content/grundlagen}	
 	%\input{content/umsetzung}
@@ -28,7 +28,7 @@
 	\input{content/henn}
 	%-----------------------------------------------
 	
-	\onecolumn
+	%\onecolumn
 	\input{content/literatur}
 	
 \end{document}
