--- a/content/literatur.tex
+++ b/content/literatur.tex
@@ -11,12 +11,12 @@
 \bibitem[enc11]{bib:neuron}
   \textsc{encefalus.com}: 
   \textbf{Modell eines neuronalen Netzes}.
-  \emph{http://encefalus.com}, 2010, Abgerufen am 17.04.2011
+  \emph{www.encefalus.com}, 2010, Abgerufen am 17.04.2011
   
  \bibitem[hef11]{bib:stufe}
   \textsc{Klaus Heft}: 
   \textbf{MATHEMATISCHER VORKURS zum Studium der Physik}.
-  \emph{http://www.thphys.uni-heidelberg.de/~hefft/vk1/}, 2011, Abgerufen am 17.04.2011
+  \emph{www.thphys.uni-heidelberg.de/\textasciitilde{}hefft/vk1/}, 2011, Abgerufen am 17.04.2011
 
 % Dreher
 \bibitem[ct211]{bib:ct211}
