--- a/content/dreher.tex
+++ b/content/dreher.tex
@@ -5,4 +5,4 @@ Hier gibt es zwei Beispiele beim \emph{RoboCup}, die Weltmeisterschaft der Robot
 
 Neuronale Netze sind der Natur nachempfunden, da die Natur unglaublich effizient und fehlertolerant arbeitet. So ist es ein logischer Schritt noch mehr von der Natur zu kopieren. Als eines der bekanntesten Beispiele sei hier der Ameisenalgorithmus genannt. Dabei werden Ameisen simuliert, die den Anspruch haben, den kürzesten Weg zum Futter zu finden. Dieser zeigt anschaulich, wie viel Potential in einfachen Algorithmen der Natur steckt. Verwendet wird der Ameisenalgorithmus zum Beispiel bei Navi\-gations\-soft\-ware und bei Prozessoptimierung im Maschinenbau. \cite{bib:ameisen}
 
-Persönlich bleibt festzuhalten: Sowohl die Informatik, als auch die Biologie sind fas\-zi\-nie\-rend.  Die Faszination lässt sich nur steigern durch die Kombinationen zwischen den auf den ersten Blick sehr unterschiedlichen Gebiete. Dieses Potential, das hier frei wird, gilt es weiter zu erforschen und zu nutzen.
+Persönlich bleibt festzuhalten: Sowohl die Informatik, als auch die Biologie sind fas\-zi\-nie\-rend.  Die Faszination lässt sich nur durch die Kombinationen zwischen den auf den ersten Blick sehr unterschiedlichen Gebieten steigern. Dieses Potential, das hier frei wird, gilt es weiter zu erforschen und zu nutzen.
