--- a/content/grundlagen.tex
+++ b/content/grundlagen.tex
@@ -175,4 +175,4 @@ Das Gradientenabstiegsverfahren ist sehr elegant und einfach zu implementieren. 
 Des Weiteren ist nicht sicher, ob das Minimum, auf das das Gewicht optimiert wird, wirklich ein globales Minimum ist. Da immer nur in Richtung der negativen Steigung gewandert wird, ist es sehr wahrscheinlich, nur ein lokales Minimum zu erreichen. Dagegen gibt es auch keine Maßnahme. Sollte das Netz also trotz Training keine ausreichend genaue Systemantwort generieren, wäre es eine Option, die Gewichte nochmals neu mit Zufallszahlen zu initialisieren, um dadurch möglicherweise in einem besseren Minimum des Fehlers zu finden.
 
 \section{Ausführung}
-Sobald das Training abgeschlossen ist, kann das neuronale Netz eingesetzt werden. Dazu wird aus dem Backpropagation Netz wieder ein einfaches Feedforward Netz. Der Input des Netzes wird über die nun statische Gewichtung der Verbindungen berechnet und ausgegeben. Je nach Güte des Trainings wird das Netz nun adäquate Antworten auch auf neue Inputparameter geben.
+Sobald das Training abgeschlossen ist, kann das neuronale Netz eingesetzt werden. Dazu wird aus dem Backpropagation Netz wieder ein einfaches Feedforward Netz. Der Input des Netzes wird über die nun statischen Gewichtung der Verbindungen berechnet und ausgegeben. Je nach Güte des Trainings wird das Netz nun adäquate Antworten auch auf neue Inputparameter geben. Selbst bei perfektem Training ist jedoch kein fehlerfreies Arbeiten des Systems gewährleistet.
