--- a/content/henn.tex
+++ b/content/henn.tex
@@ -1,5 +1,5 @@
 \section{Erkenntnisse von David Henn}
-Neuronale Netze sind das perfekte Beispiel für ein System. Dessen Definition ja beinhaltet, dass das Ganze mehr als die Summe seiner Teile ist. Mit einem einzelnen Neuron wäre nicht viel anzufangen. Im Verbund jedoch ist es möglich, jede Funktion zu approximieren und sogar in gewissem Maße menschliche Intelligenz nachzuahmen und sich selbstständig zu verbessern.
+Neuronale Netze sind das perfekte Beispiel für ein System. Dessen Definition beinhaltet, dass das Ganze mehr ergibt, als die Summe seiner Teile. Mit einem einzelnen Neuron wäre nicht viel anzufangen. Im Verbund jedoch ist es möglich, jede Funktion zu approximieren und sogar in gewissem Maße menschliche Intelligenz nachzuahmen und sich selbstständig zu verbessern.
 
 Durch diese Eigenschaften spannt sich ein gewaltiger Raum für den möglichen Einsatz solcher Netze auf. Sobald ein Programm auf unvorhersehbare Parameter sinnvoll reagieren soll, ist der Einsatz eines neuronalen Netzes in Erwägung zu ziehen.
 
@@ -7,4 +7,4 @@ Der große Nachteil dieser Netze ist jedoch, dass es für den Mensch nicht mögl
 
 Dieser Umstand erschwert den Einsatz neuronaler Netze für sicherheitskritische Aufgaben. Der Mensch muss sich jederzeit im klaren sein, dass ein neuronales Netz sich auch mal irren kann.
 
-Berücksichtigt man jedoch diese Unschärfe, ist ein neuronales Netz ein mächtiges Werkzeug, mit dem sich sehr flexible Algorithmen umsetzen lassen, oder sogar neue Erkenntnisse gewonnen werden können.
+Berücksichtigt man jedoch diese Unschärfe, ist ein neuronales Netz ein mächtiges Werk\-zeug, mit dem sich sehr flexible Algorithmen umsetzen lassen, oder sogar neue Erkenntnisse gewonnen werden können.
