--- a/content/literatur.tex
+++ b/content/literatur.tex
@@ -12,6 +12,11 @@
   \textsc{encefalus.com}: 
   \textbf{Modell eines neuronalen Netzes}.
   \emph{www.encefalus.com}, 2010, Abgerufen am 17.04.2011
+
+  \bibitem[doe11]{bib:doersam}
+	\textsc{Dr. Thomas Dörsam}:
+	\textbf{Digitale Sprachverarbeitung}.
+	Skript, 2011
   
  \bibitem[hef11]{bib:stufe}
   \textsc{Klaus Heft}: 
